--- a/PhoneBook.Vocalnight/PhoneBook.Vocalnight/PhoneBook.Vocalnight.csproj
+++ b/PhoneBook.Vocalnight/PhoneBook.Vocalnight/PhoneBook.Vocalnight.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ConsoleTableExt" Version="3.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
+  </ItemGroup>
+
 </Project>
