added an extra menu for categories

--- a/Furiax.Phonebook/Phonebook/Phonebook.csproj
+++ b/Furiax.Phonebook/Phonebook/Phonebook.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Spectre.Console" Version="0.47.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
