--- a/Furiax.Phonebook/Phonebook/Phonebook.csproj
+++ b/Furiax.Phonebook/Phonebook/Phonebook.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>bd1d6419-1ff5-40eb-a733-5beb6dc8870e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,7 +15,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Graph" Version="5.19.0" />
+    <PackageReference Include="SendGrid" Version="9.28.1" />
     <PackageReference Include="Spectre.Console" Version="0.47.0" />
+    <PackageReference Include="Twilio" Version="6.10.0" />
   </ItemGroup>
 
 </Project>
