--- a/Phonebook.MartinL-no/Phonebook.MartinL-no/Phonebook.MartinL-no.csproj
+++ b/Phonebook.MartinL-no/Phonebook.MartinL-no/Phonebook.MartinL-no.csproj
@@ -8,4 +8,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
+  </ItemGroup>
 </Project>
