--- a/Phonebook.MartinL-no/Phonebook.MartinL-no/Phonebook.MartinL-no.csproj
+++ b/Phonebook.MartinL-no/Phonebook.MartinL-no/Phonebook.MartinL-no.csproj
@@ -10,5 +10,6 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
   </ItemGroup>
 </Project>
