feature[contact controller]:  add ability to see table with no contacts

--- a/Phonebook.MartinL-no/Phonebook.MartinL-no/Phonebook.MartinL-no.csproj
+++ b/Phonebook.MartinL-no/Phonebook.MartinL-no/Phonebook.MartinL-no.csproj
@@ -21,4 +21,10 @@
     </PackageReference>
     <PackageReference Include="Spectre.Console" Version="0.47.0" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="User Interface\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="User Interface\" />
+  </ItemGroup>
 </Project>
