refactor: move classes to separate folders

--- a/Phonebook.MartinL-no/Phonebook.MartinL-no/Phonebook.MartinL-no.csproj
+++ b/Phonebook.MartinL-no/Phonebook.MartinL-no/Phonebook.MartinL-no.csproj
@@ -23,8 +23,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="User Interface\" />
+    <None Remove="Controllers\" />
+    <None Remove="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="User Interface\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 </Project>
