--- a/Phonebook.MartinL-no/Phonebook.MartinL-no/Phonebook.MartinL-no.csproj
+++ b/Phonebook.MartinL-no/Phonebook.MartinL-no/Phonebook.MartinL-no.csproj
@@ -22,13 +22,13 @@
     <PackageReference Include="Spectre.Console" Version="0.47.0" />
   </ItemGroup>
   <ItemGroup>
-    <None Remove="User Interface\" />
     <None Remove="Controllers\" />
     <None Remove="Models\" />
+    <None Remove="User Interfaces\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="User Interface\" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
+    <Folder Include="User Interfaces\" />
   </ItemGroup>
 </Project>
