--- a/Phonebook.MartinL-no/Phonebook.MartinL-no/Phonebook.MartinL-no.csproj
+++ b/Phonebook.MartinL-no/Phonebook.MartinL-no/Phonebook.MartinL-no.csproj
@@ -21,6 +21,7 @@
     </PackageReference>
     <PackageReference Include="Spectre.Console" Version="0.47.0" />
     <PackageReference Include="SendGrid" Version="9.28.1" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Controllers\" />
