Send email to contact

--- a/Phonebook.pcjb/appsettings.json
+++ b/Phonebook.pcjb/appsettings.json
@@ -1,3 +1,10 @@
 {
-    "DatabaseConnectionString": "Persist Security Info=False;User ID={DatabaseUserID};Password={DatabasePassword};Initial Catalog=PhoneBook;Server=127.0.0.1;Encrypt=True;TrustServerCertificate=true;"
+    "DatabaseConnectionString": "Persist Security Info=False;User ID={DatabaseUserID};Password={DatabasePassword};Initial Catalog=PhoneBook;Server=127.0.0.1;Encrypt=True;TrustServerCertificate=true;",
+    "Mail": {
+        "From": "phonebook@example.com",
+        "Host": "127.0.0.1",
+        "Port": 1025,
+        "Username": "{MailUsername}",
+        "Password": "{MailPassword}"
+    }
 }
