--- a/Phonebook.pcjb/appsettings.json
+++ b/Phonebook.pcjb/appsettings.json
@@ -6,5 +6,10 @@
         "Port": 1025,
         "Username": "{MailUsername}",
         "Password": "{MailPassword}"
+    },
+    "Twilio": {
+        "From": "{TwilioFrom}", 
+        "AccountSid": "{TwilioAccountSid}",
+        "AuthToken": "{TwilioAuthToken}"
     }
 }
