--- a/Phonebook.K-MYR/Phonebook.K-MYR/Phonebook.K-MYR.csproj
+++ b/Phonebook.K-MYR/Phonebook.K-MYR/Phonebook.K-MYR.csproj
@@ -8,4 +8,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.13" />
+    <PackageReference Include="spectre.console" Version="0.47.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
