Added Error Handling and Validators for Email and Phone Numbers

--- a/Phonebook.K-MYR/Phonebook.K-MYR/app.config
+++ b/Phonebook.K-MYR/Phonebook.K-MYR/app.config
@@ -2,7 +2,7 @@
     <configuration>
         <appSettings>
             <add key="DataSource" value=""/>
-            <add key="DatabaseName" value=""/>
+            <add key="DatabaseName" value="Phonebook"/>
             <add key="UserName" value=""/>
             <add key="Password" value=""/>
         </appSettings>
