--- a/PhoneBook.UgniusFalze/PhoneBook.UgniusFalze/PhoneBook.UgniusFalze.csproj
+++ b/PhoneBook.UgniusFalze/PhoneBook.UgniusFalze/PhoneBook.UgniusFalze.csproj
@@ -7,4 +7,15 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="ConsoleTableExt" Version="3.2.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Spectre.Console" Version="0.48.1-preview.0.5" />
+    </ItemGroup>
+
 </Project>
