--- a/PhoneBook.UgniusFalze/PhoneBook.UgniusFalze/PhoneBook.UgniusFalze.csproj
+++ b/PhoneBook.UgniusFalze/PhoneBook.UgniusFalze/PhoneBook.UgniusFalze.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="ConsoleTableExt" Version="3.2.0" />
+      <PackageReference Include="EmailValidation" Version="1.0.10" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
