--- a/PhoneBook.ManuelE-Osorio/PhoneBook/PhoneBook.csproj
+++ b/PhoneBook.ManuelE-Osorio/PhoneBook/PhoneBook.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ConsoleTableExt" Version="3.2.0" />
     <PackageReference Include="libphonenumber-csharp" Version="8.13.27" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
