Basic Add and View Functions

--- a/Phonebook.StevieTV/Phonebook.StevieTV/Phonebook.StevieTV.csproj
+++ b/Phonebook.StevieTV/Phonebook.StevieTV/Phonebook.StevieTV.csproj
@@ -17,4 +17,10 @@
         <PackageReference Include="Spectre.Console" Version="0.48.1-preview.0.12" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
