--- a/Phonebook.StevieTV/Phonebook.StevieTV/Phonebook.StevieTV.csproj
+++ b/Phonebook.StevieTV/Phonebook.StevieTV/Phonebook.StevieTV.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="EmailValidation" Version="1.0.10" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.1">
             <PrivateAssets>all</PrivateAssets>
