--- a/Phonebook.StevieTV/Phonebook.StevieTV/Phonebook.StevieTV.csproj
+++ b/Phonebook.StevieTV/Phonebook.StevieTV/Phonebook.StevieTV.csproj
@@ -15,6 +15,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+        <PackageReference Include="PhoneNumberParser" Version="3.3.1" />
         <PackageReference Include="Spectre.Console" Version="0.48.1-preview.0.12" />
     </ItemGroup>
 
