--- a/PhoneBook.Doc415/PhoneBook.Doc415.csproj
+++ b/PhoneBook.Doc415/PhoneBook.Doc415.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
     <PackageReference Include="Spectre.Console" Version="0.48.1-preview.0.11" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageReference Include="Twilio" Version="7.0.0-rc.1" />
   </ItemGroup>
 
   <ItemGroup>
