--- a/Phonebook.frockett/Phonebook.frockett/Phonebook.frockett.csproj
+++ b/Phonebook.frockett/Phonebook.frockett/Phonebook.frockett.csproj
@@ -14,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
+    <PackageReference Include="Spectre.Console" Version="0.48.0" />
   </ItemGroup>
 
 </Project>
