--- a/.gitignore
+++ b/.gitignore
@@ -476,3 +476,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 Phonebook.MartinL-no/Phonebook.MartinL-no/AppSettingsSecrets.config
+/PhoneBook.Paul_W_Saltzman/Phonebook/App.config
