--- a/phonebook.Fennikko/phonebook.Fennikko/phonebook.Fennikko.csproj
+++ b/phonebook.Fennikko/phonebook.Fennikko/phonebook.Fennikko.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="libphonenumber-csharp" Version="8.13.33" />
+    <PackageReference Include="libphonenumber-csharp.extensions" Version="8.13.33" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.3">
