--- a/phonebook.Fennikko/phonebook.Fennikko/phonebook.Fennikko.csproj
+++ b/phonebook.Fennikko/phonebook.Fennikko/phonebook.Fennikko.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Spectre.Console" Version="0.48.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
