--- a/Phonebook.samggannon/Phonebook.samggannon/Phonebook.samggannon.csproj
+++ b/Phonebook.samggannon/Phonebook.samggannon/Phonebook.samggannon.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+    <PackageReference Include="Spectre.Console" Version="0.49.1" />
+  </ItemGroup>
+
 </Project>
