--- a/PhoneBook.DouglasFir/PhoneBook.DouglasFir.csproj
+++ b/PhoneBook.DouglasFir/PhoneBook.DouglasFir.csproj
@@ -13,7 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Database\" />
+    <Folder Include="Application\" />
+	<Folder Include="Database\" />
+	<Folder Include="Enums\" />
+	<Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
