--- a/PhoneBook.DouglasFir/PhoneBook.DouglasFir.csproj
+++ b/PhoneBook.DouglasFir/PhoneBook.DouglasFir.csproj
@@ -9,12 +9,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.5" />
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\" />
-	<Folder Include="Database\" />
 	<Folder Include="Enums\" />
   </ItemGroup>
 
