--- a/Phonebook.Asv/Phonebook.Asv/Phonebook.Asv.csproj
+++ b/Phonebook.Asv/Phonebook.Asv/Phonebook.Asv.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.6">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -18,6 +19,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
+    <PackageReference Include="Twilio" Version="7.1.0" />
   </ItemGroup>
 
 </Project>
