--- a/PhoneBook.kalsson/PhoneBook.kalsson/PhoneBook.kalsson.csproj
+++ b/PhoneBook.kalsson/PhoneBook.kalsson/PhoneBook.kalsson.csproj
@@ -7,4 +7,14 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.6">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+      <PackageReference Include="Spectre.Console" Version="0.49.1" />
+    </ItemGroup>
+
 </Project>
