--- a/PhoneBook.kalsson/PhoneBook.kalsson/PhoneBook.kalsson.csproj
+++ b/PhoneBook.kalsson/PhoneBook.kalsson/PhoneBook.kalsson.csproj
@@ -17,4 +17,10 @@
       <PackageReference Include="Spectre.Console" Version="0.49.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
