--- a/Phonebook.javedkhan2k2/Phonebook.javedkhan2k2/Phonebook.javedkhan2k2.csproj
+++ b/Phonebook.javedkhan2k2/Phonebook.javedkhan2k2/Phonebook.javedkhan2k2.csproj
@@ -22,6 +22,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0" />
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
+    <PackageReference Include="System.Net.Mail" Version="1.0.0-rtm-00002" />
+    <PackageReference Include="Twilio" Version="7.1.1" />
   </ItemGroup>
 
 </Project>
