--- a/Console.Phonebook.Ananttuli/Program/appsettings.json
+++ b/Console.Phonebook.Ananttuli/Program/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Database": {
-    "Name": "PhonebookDBNFNTAT",
+    "Name": "PhonebookDBNFNTAT2",
     "Host": "(localdb)\\MSSQLLocalDB"
   }
 }
