--- a/PhoneBook.UndercoverDev/PhoneBook/app.config
+++ b/PhoneBook.UndercoverDev/PhoneBook/app.config
@@ -2,7 +2,7 @@
 <configuration>
     <connectionStrings>
         <add name="ContactContext"
-            connectionString="Server=sqlserver,1433;Database=ContactServer;User Id=SA;Password=Tu1167r?;"
+            connectionString="Server=localhost,1433;Database=ContactServer;User Id=SA;Password=Tu1167r?;Encrypt=False;TrustServerCertificate=True;"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
