Add code for phone number and email validation

--- a/PhoneBook.UndercoverDev/PhoneBook/PhoneBook.csproj
+++ b/PhoneBook.UndercoverDev/PhoneBook/PhoneBook.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="libphonenumber-csharp" Version="8.13.40" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.7">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
