--- a/PhoneBook.UndercoverDev/PhoneBook/PhoneBook.csproj
+++ b/PhoneBook.UndercoverDev/PhoneBook/PhoneBook.csproj
@@ -9,11 +9,13 @@
 
   <ItemGroup>
     <PackageReference Include="libphonenumber-csharp" Version="8.13.40" />
+    <PackageReference Include="MailKit" Version="4.7.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.7">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
+    <PackageReference Include="SendGrid" Version="9.29.3" />
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
   </ItemGroup>
