--- a/Phonebook.kwm0304/Phonebook.kwm0304.csproj
+++ b/Phonebook.kwm0304/Phonebook.kwm0304.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
   
+    <PackageReference Include="MailKit" Version="4.7.1.1" />
+  
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.7">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
