--- a/Phonebook.kwm0304/Phonebook.kwm0304.csproj
+++ b/Phonebook.kwm0304/Phonebook.kwm0304.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
   
+    <PackageReference Include="dotenv.net" Version="3.2.0" />
+  
     <PackageReference Include="MailKit" Version="4.7.1.1" />
   
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
@@ -27,6 +29,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
+    <PackageReference Include="Twilio" Version="7.2.2" />
+    <PackageReference Include="Twilio.AspNet.Core" Version="8.0.2" />
   </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.json">
