set UseExampleData to true

--- a/Phonebook.thomas-henley/PhoneBook/PhoneBook/appsettings.json
+++ b/Phonebook.thomas-henley/PhoneBook/PhoneBook/appsettings.json
@@ -3,5 +3,5 @@
     "LocalDB": "Server=(localdb)\\MSSQLLocalDB;Database=HenleyPhonebookDB;Integrated Security=true"
   },
   
-  "UseExampleData": false
+  "UseExampleData": true
 }
