--- a/KaitoKid.Phonebook/PhoneBook/App.config
+++ b/KaitoKid.Phonebook/PhoneBook/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="PhonebookDBConnection" value="Data Source=SHREYAS; Initial Catalog= Phonebook; Integrated Security= True; ;TrustServerCertificate=True"/>
+		<add key="PhonebookDBConnection" value="Data Source=${DB_SERVER}; Initial Catalog= ${DB_NAME}; Integrated Security= True; ;TrustServerCertificate=True"/>
 	</appSettings>
 </configuration>
