--- a/Phonebook.TwilightSaw/appsettings.json
+++ b/Phonebook.TwilightSaw/appsettings.json
@@ -11,7 +11,7 @@
   },
   "CustomSettings": {
     "YourEmail": "yourEmail",
-    "YourAppPassword": "yourGoodleAppPassword",
+    "YourAppPassword": "yourGoogleAppPassword",
     "YourSID": "yourTwilioSID",
     "YourAuthToken": "yourTwilioAuthToken",
     "YourPhoneNumber": "yourTwilioPhoneNumber"
