--- a/PhoneBook.HarryJLeigh/App.Config
+++ b/PhoneBook.HarryJLeigh/App.Config
@@ -2,7 +2,7 @@
 <configuration>
     <connectionStrings>
         <add name="DatabasePath"
-             connectionString="Server=your-local-db;Database=your-phonebook-db;Trusted_Connection=True;TrustServerCertificate=True;"/>
+             connectionString="Server=MSI;Database=PhonebookDb;Trusted_Connection=True;TrustServerCertificate=True;"/>
     </connectionStrings>
 </configuration>
 
