--- a/PhoneBook.KroksasC/PhoneBook/App.config
+++ b/PhoneBook.KroksasC/PhoneBook/App.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="phonebook"
-		     connectionString="Server=.;Database=phonebook;Trusted_Connection=True;TrustServerCertificate=True;"
+		<add name="Phonebook"
+		     connectionString="Data Source=localhost;Initial Catalog=PhoneBookDB;Integrated Security=True;TrustServerCertificate=True;"
 		     providerName="System.Data.SqlClient" />
+		
 	</connectionStrings>
+	<appSettings>
+		<add key="email" value="" />
+		<add key="emailPassword" value=""/>
+	</appSettings>
 </configuration>
