--- a/PhoneBook.KroksasC/PhoneBook/Properties/launchSettings.json
+++ b/PhoneBook.KroksasC/PhoneBook/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "PhoneBook": {
       "commandName": "Project",
-      "workingDirectory": "C:\\Users\\Admins\\source\\repos\\PhoneBook\\PhoneBook"
+      "workingDirectory": "./bin"
     }
   }
 }
