se agregaron restricciones en la base

--- a/PhoneBook.AnaClos/PhoneBook.AnaClos/appsettings.json
+++ b/PhoneBook.AnaClos/PhoneBook.AnaClos/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "PhoneBookDatabase": "Server=localhost;Database=PhoneBook;Trusted_Connection=True;TrustServerCertificate=True;"
+    "PhoneBookDatabase": "Server=DESKTOP-H645C4H\\SQLEXPRESS;Database=PhoneBook;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
