--- a/Phonebook.iamnikitakostin/Console.Phonebook/Console.Phonebook/Console.Phonebook.csproj
+++ b/Phonebook.iamnikitakostin/Console.Phonebook/Console.Phonebook/Console.Phonebook.csproj
@@ -20,10 +20,14 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
+    <PackageReference Include="Twilio" Version="7.8.0" />
   </ItemGroup>
 
   <ItemGroup>
     <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="authentication.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
